styles/header.css
header {
  display: flex;
  position: fixed;
  z-index: 2;
}

nav {
  background-color: whitesmoke;
  border-radius: 0 0 40px 0;
  display: flex;

  font-weight: 500;
  font-size: x-large;

  box-shadow: 5px 10px 5px rgb(0,0,0,0.2);
}

li {
  list-style-type: none;
  margin: 10px 3vw 10px 3vw;
}

